--- a/samples/src/main/res/values/strings.xml
+++ b/samples/src/main/res/values/strings.xml
@@ -25,6 +25,11 @@
 	<string name="placeholder_empty">No data</string>
 	<string name="placeholder_offline">No network</string>
 
+	<string name="fragment_media_sample_button_play_sound">Play sound</string>
+	<string name="fragment_media_sample_button_stop_sound">Stop sound</string>
+	<string name="fragment_media_sample_button_pick_image_from_camera">Pick image from camera</string>
+	<string name="fragment_media_sample_button_pick_image_from_gallery">Pick image from gallery</string>
+
 	<string name="fragment_rx_sample_button_run">Run Rx call</string>
 	<string name="fragment_rx_sample_button_terminate">Terminate all calls</string>
 	<string name="fragment_rx_sample_button_is_running">Is running?</string>
