--- a/samples/src/main/res/values/strings.xml
+++ b/samples/src/main/res/values/strings.xml
@@ -20,7 +20,8 @@
 
 	<string name="menu_activity_adapter_sample_list_simple">Simple List</string>
 	<string name="menu_activity_adapter_sample_list_multi">Multi List</string>
-	<string name="menu_activity_adapter_sample_pager">Pager</string>
+	<string name="menu_activity_adapter_sample_pager_simple">Simple Pager</string>
+	<string name="menu_activity_adapter_sample_pager_multi">Multi Pager</string>
 
 	<string name="placeholder_empty">No data</string>
 	<string name="placeholder_offline">No network</string>
