--- a/samples/src/main/res/values/strings.xml
+++ b/samples/src/main/res/values/strings.xml
@@ -19,11 +19,12 @@
 	<string name="title_utility">Utility\nModule</string>
 	<string name="title_view">View\nModule</string>
 
-	<string name="menu_activity_adapter_sample_list_simple">Simple List</string>
-	<string name="menu_activity_adapter_sample_grid_simple">Simple Grid</string>
-	<string name="menu_activity_adapter_sample_list_multi">Multi List</string>
-	<string name="menu_activity_adapter_sample_pager_simple">Simple Pager</string>
-	<string name="menu_activity_adapter_sample_pager_multi">Multi Pager</string>
+	<string name="menu_activity_adapter_sample_list_simple">List Simple</string>
+	<string name="menu_activity_adapter_sample_list_multi">List Multi</string>
+	<string name="menu_activity_adapter_sample_list_diff">List Diff</string>
+	<string name="menu_activity_adapter_sample_grid_simple">Grid Simple</string>
+	<string name="menu_activity_adapter_sample_pager_simple">Pager Simple</string>
+	<string name="menu_activity_adapter_sample_pager_multi">Pager Multi</string>
 
 	<string name="placeholder_empty">No data</string>
 	<string name="placeholder_offline">No network</string>
